{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 16,
  "lineage": "0a9f8b55-1ccb-6e2a-b874-a2e6007c8ba6",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09f0478228932d57d",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0ae0d3dc09b6466b0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0ae0d3dc09b6466b0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0eb7243ab56c43799",
            "private_dns": "ip-10-0-0-27.eu-west-1.compute.internal",
            "private_ip": "10.0.0.27",
            "public_ip": "54.171.104.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-053a51c5e5bcf9ab0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06d9b7924dcca54be",
            "tags": {
              "Name": "app-ygor"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d61d42d60ea7978b"
            ]
          },
          "dependencies": [
            "aws_vpc.app",
            "module.app.aws_security_group.app",
            "module.app.aws_subnet.app",
            "module.db.aws_instance.db",
            "module.db.aws_security_group.db",
            "module.db.aws_subnet.db"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-049b0eb3c48e9b0e3",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0b5cd75c2a6518d68",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0b5cd75c2a6518d68",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-01a2a2d011d659e31",
            "private_dns": "ip-10-0-1-131.eu-west-1.compute.internal",
            "private_ip": "10.0.1.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02afde66d729eefbd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09a53cf3cc7f7d24e",
            "tags": {
              "Name": "app-ygor-db"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05a314c6d273b4507"
            ]
          },
          "dependencies": [
            "aws_vpc.app",
            "module.app.aws_security_group.app",
            "module.db.aws_security_group.db",
            "module.db.aws_subnet.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-062f8ba727e10427f",
            "owner_id": "135928476890",
            "tags": {
              "Name": "app-ygor"
            },
            "vpc_id": "vpc-05e712a99a1982dfa"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-028f717ba69b5851a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-06d9b7924dcca54be"
            ],
            "tags": {
              "Name": "app-ygor"
            },
            "vpc_id": "vpc-05e712a99a1982dfa"
          },
          "dependencies": [
            "aws_vpc.app",
            "module.app.aws_subnet.app"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              }
            ],
            "id": "acl-07ba8f429cc23b133",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 27017,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 27017
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-09a53cf3cc7f7d24e"
            ],
            "tags": {
              "Name": "app-ygor-db"
            },
            "vpc_id": "vpc-05e712a99a1982dfa"
          },
          "dependencies": [
            "aws_vpc.app",
            "module.app.aws_subnet.app",
            "module.db.aws_subnet.db"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f8b454fe6f893ed2",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-062f8ba727e10427f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-ygor-public"
            },
            "vpc_id": "vpc-05e712a99a1982dfa"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-022eabee27f1d96d3",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "app-ygor-db-private"
            },
            "vpc_id": "vpc-05e712a99a1982dfa"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064406df3c3bae2b9",
            "route_table_id": "rtb-0f8b454fe6f893ed2",
            "subnet_id": "subnet-06d9b7924dcca54be"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_vpc.app",
            "module.app.aws_route_table.app",
            "module.app.aws_subnet.app"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c45f0208d8ec71c",
            "route_table_id": "rtb-022eabee27f1d96d3",
            "subnet_id": "subnet-09a53cf3cc7f7d24e"
          },
          "dependencies": [
            "aws_vpc.app",
            "module.db.aws_route_table.db",
            "module.db.aws_subnet.db"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0d61d42d60ea7978b",
            "description": "app-ygor access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d61d42d60ea7978b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-ygor",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-ygor"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e712a99a1982dfa"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-05a314c6d273b4507",
            "description": "app-ygor db access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a314c6d273b4507",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d61d42d60ea7978b"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "app-ygor-db",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-ygor-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e712a99a1982dfa"
          },
          "dependencies": [
            "aws_vpc.app",
            "module.app.aws_security_group.app"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-06d9b7924dcca54be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-06d9b7924dcca54be",
            "map_public_ip_on_launch": true,
            "owner_id": "135928476890",
            "tags": {
              "Name": "app-ygor"
            },
            "vpc_id": "vpc-05e712a99a1982dfa"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-09a53cf3cc7f7d24e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09a53cf3cc7f7d24e",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "app-ygor-db"
            },
            "vpc_id": "vpc-05e712a99a1982dfa"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-05e712a99a1982dfa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0141e204733db5325",
            "default_route_table_id": "rtb-057f0f5c3aefa42a3",
            "default_security_group_id": "sg-0c86afa1bd023dc74",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05e712a99a1982dfa",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-057f0f5c3aefa42a3",
            "owner_id": "135928476890",
            "tags": {
              "Name": "app-ygor-terraform-modules"
            }
          }
        }
      ]
    }
  ]
}